complete phase 10
