# backend/docs/swagger.yaml
@@ -9,6 +9,11 @@ definitions:
       user_id:
         type: string
     type: object
+  dto.AssignSeatRequest:
+    properties:
+      user_id:
+        type: string
+    type: object
   dto.BulkSeatItem:
     properties:
       id:
@@ -176,6 +181,10 @@ definitions:
     type: object
   dto.SeatResponse:
     properties:
+      assigned_user_id:
+        type: string
+      assigned_user_name:
+        type: string
       id:
         type: string
       label:
@@ -850,6 +859,65 @@ paths:
           schema:
             type: string
       summary: Get a seat by ID
+      tags:
+      - Seats
+  /seats/{id}/assign:
+    delete:
+      parameters:
+      - description: Seat ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.SeatResponse'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "403":
+          description: Forbidden
+          schema:
+            type: string
+      summary: Remove permanent user assignment from a seat
+      tags:
+      - Seats
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: Seat ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: User ID to assign
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/dto.AssignSeatRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.SeatResponse'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "403":
+          description: Forbidden
+          schema:
+            type: string
+      summary: Assign a user to a seat permanently
       tags:
       - Seats
   /seats/{id}/move:
